# AlgoTrader

./: .gitignore  CMakeLists.txt  SMA_Log.txt  test_data.txt  test_data2.txt  tmp.txt
src/: Trader.cpp  Trader.h  helpers.h  main.cpp  tests.cpp
